# bcachefs-tools

./: .bcachefs_revision  .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Changelog.mdwn  INSTALL  INSTALL.md  Makefile  Makefile.common  Makefile.dkms  Makefile.pc  README.md  bcachefs-tools.spec  bcachefs-wait-devices@.service.in  bcachefs-wait@.service.in  bcachefs.8  build.rs  cmd_data.c  cmd_device.c  cmd_format.c  cmd_key.c  cmd_list_journal.c  cmd_migrate.c  cmd_subvolume.c  crane-build.nix  debian  default.nix  flake.nix  libbcachefs.c  libbcachefs.h  make-release-tarball.sh  module-build.nix  mount.bcachefs.sh  nixos-test.nix  out  overlay.nix
Documentation/: SubmittingPatches.rst  index.rst  limits.rst  qemu_direct_io.rst  recovery.rst
bcachefs-shim/: Cargo.toml  build.rs
bcachefs-shim-macros/: Cargo.toml
bcachefs-shim/src/: lib.rs  workqueue.rs  wrapper.h
bch_bindgen/: Cargo.toml  build.rs
bch_bindgen/src/: accounting.rs  bcachefs.rs  bitmask.rs  bkey.rs  btree.rs  darray.rs  extent.rs  extent_iter.rs  fs.rs  journal.rs  lib.rs  libbcachefs_wrapper.h  opts.rs  printbuf.rs  sb.rs
bch_bindgen/src/btree/: mod.rs
bch_bindgen/src/data/: extents.rs  io.rs  mod.rs  moving.rs
bch_bindgen/src/journal/: mod.rs
bch_bindgen/src/sb/: io.rs  mod.rs
c_src/: bcachefs.c  cmd_attr.c  cmd_data.c  cmd_device.c  cmd_dump.c  cmd_format.c  cmd_fs.c  cmd_image.c  cmd_key.c  cmd_kill_btree_node.c  cmd_migrate.c  cmd_mount.c  cmd_strip_alloc.c  cmd_super.c  cmd_top.c  cmds.h  crypto.c  crypto.h  eytzinger_test.c  fuse_shims.c  fuse_shims.h  ida.c  libbcachefs.c  libbcachefs.h  posix_to_bcachefs.c  posix_to_bcachefs.h  qcow2.c  rust_shims.c  rust_shims.h  tools-util.c  tools-util.h
debian/: .gitignore  bcachefs-tools.config  bcachefs-tools.install  bcachefs-tools.postinst  bcachefs-tools.templates  control  rules
dkms/: Makefile  dkms.conf.in
doc/: apt.bcachefs.org-README.md  bcachefs-principles-of-operation.tex  bcachefs.5.rst.tmpl  build.md  design-mt-compression.md  mt-compress-bench.md  opts_macro.h  testing.md  vendored-kernel-files.md  x-macro-mechanism.md
docs/: bucketbased.rst  conf.py  debugging.rst  feat-caching.rst  feat-checksumming.rst  feat-compression.rst  feat-devicelabels.rst  feat-durability.rst  feat-encryption.rst  feat-erasurecoding.rst  feat-inlineextents.rst  feat-iopathoptions.rst  feat-multipledevices.rst  feat-quotas.rst  feat-reflink.rst  feat-replication.rst  feat-subvolumes.rst  index.rst  introduction.rst  ioctl.rst  mgmt-datamanagement.rst  mgmt-datarereplicate.rst  mgmt-deviceaddrm.rst  mgmt-devicemanagement.rst  mgmt-formatting.rst  mgmt-fsck.rst  mgmt-fsresize.rst  mgmt-fsstatus.rst  mgmt-journal.rst  mgmt-mounting.rst  mgmt-rebalance.rst  mgmt-scrub.rst  poo.rst  (+3 more)
fs/: Cargo.toml  Kconfig  Makefile  Makefile.rust.vendor  bcachefs.h  bcachefs_format.h  bcachefs_ioctl.h  build.rs  codegen.rs  codegen_main.rs  errcode.c  errcode.h  errcode.rs  mod.rs  opts.c  opts.h  opts.rs  typeinfo.rs
fs/alloc/: accounting.c  accounting.h  accounting.rs  accounting_format.h  background.c  background.h  backpointers.c  backpointers.h  buckets.c  buckets.h  buckets.rs  buckets_types.h  check.c  check_data.c  check_data.h  discard.c  discard.h  disk_groups.c  disk_groups.h  foreground.c  foreground.h  format.h  lru.c  lru.h  lru_format.h  replicas.c  types.h
fs/btree/: bbpos_types.h  bkey.c  bkey.h  bkey.rs  bkey_methods.c  bkey_methods.h  bset.c  bset.h  cache.c  cache.h  check.c  check.h  commit.c  init.c  interior.c  interior.h  interior_types.h  iter.c  iter.h  iter.rs  journal_overlay_types.h  key_cache.c  key_cache.h  locking.c  locking.h  node_scan.c  read.c  read.h  sort.c  sort.h  types.h  types.rs  update.c  update.h  write.c  write.h  write_buffer.c  write_buffer.h  write_buffer_types.h
fs/data/: bitflip_repair.c  bitflip_repair.h  checksum.c  compress.c  compress.h  compress_types.h  compress_workers.c  compress_workers.h  copygc.c  copygc.h  copygc_types.h  extent_update.c  extents.c  extents.h  extents.rs  extents_sb.c  io_misc.c  keylist.c  migrate.c  move.c  move.h  nocow_locking.c  nocow_locking.h  read.c  read.h  reflink.c  reflink.h  update.c  update.h  write.c  write.h  write_types.h
fs/data/ec/: create.c  create.h  format.h  init.c  init.h  io.c  trigger.c  trigger.h
fs/data/reconcile/: check.c  format.h  trigger.c  trigger.h  types.h  work.c  work.h
fs/debug/: async_objs.c  compress_test.c  debug.c  mt_compress_bench.c  sysfs.c  tests.c  tests.h  tests.rs  trace.h
fs/fs/: acl.c  check.c  check.h  check_dir_structure.c  check_extents.c  check_nlinks.c  dirent.c  dirent.h  dirent.rs  inode.c  inode.h  inode.rs  inode_format.h  namei.c  namei.h  namei.rs  quota.c  quota.h  str_hash.c  str_hash.h  xattr.c  xattr.h  xattr.rs
fs/init/: chardev.c  dev.c  dev.h  error.c  error.h  error_types.h  fs.c  fs.rs  passes.c  passes.h  passes_format.h  passes_types.h  progress.c  recovery.c  recovery.h
fs/journal/: init.c  init.h  journal.c  journal.h  read.c  reclaim.c  reclaim.h  sb.c  seq_blacklist.c  types.h  validate.c  write.c
fs/sb/: clean.c  counters.c  counters.h  counters_format.h  downgrade.c  errors.c  errors_format.h  io.c  io.rs  io_types.h  members.c  members.h  members.rs  members_format.h  members_types.h
fs/scripts/: fetch-module.sh  rust-is-available-dkms.sh
fs/snapshots/: check_snapshots.c  delete.c  format.h  snapshot.c  snapshot.h  subvolume.c  subvolume.h  types.h
fs/typeinfo-macros/: Cargo.toml
fs/typeinfo-macros/src/: lib.rs
fs/util/: async_exec.rs  bitmask.rs  clock.c  darray.h  kernel.rs  locking.c  locking.h  locking.rs  mean_and_variance.c  mean_and_variance.h  mod.rs  printbuf.c  printbuf.h  printbuf.rs  rcu_pending.c  six.c  six.h  time_stats.c  time_stats.h  util.c  util.h  varint.c
fs/vfs/: buffered.c  direct.c  direct.h  fdm.h  fiemap.c  fs.c  fs.h  io.c  ioctl.c  pagecache.c  pagecache.h  swap.c  swap.h  types.h
package-ci/: Cargo.toml
package-ci/doc/: architecture.md
package-ci/scripts/: build-binary-remote.sh  build-binary.sh  post-receive  publish.sh
package-ci/src/: main.rs
(+438 files in other folders)
