[workspace]
resolver = "2"
default-members = [".", "bch_bindgen"]

[package]
name = "bcachefs-tools"
version = "1.25.3"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>", "Kent Overstreet <kent.overstreet@linux.dev>" ]
edition = "2021"
rust-version = "1.77.0"

[[bin]]
name = "bcachefs"
path = "src/bcachefs.rs"

[features]
fuse = []

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "4.0.32", features = ["derive", "wrap_help"] }
clap_complete = "4.3.2"
anyhow = "1.0"
libc = "0.2"
udev = "0.9"
uuid = "1"
errno = "0.3"
either = "1"
bch_bindgen = { path = "bch_bindgen" }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
zeroize = { version = "1", features = ["std", "zeroize_derive"] }
rustix = { version = "1", features = ["termios"] }
owo-colors = "4"

[dependencies.env_logger]
version = "0.11"
default-features = false

[profile.release]
strip = "none"
