[workspace]
resolver = "2"
members = [".", "fs", "bcachefs-shim", "bcachefs-shim-macros", "bch_bindgen", "doc/docgen"]
default-members = [".", "fs"]

[package]
name = "bcachefs-tools"
version = "1.38.8"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>", "Kent Overstreet <kent.overstreet@linux.dev>" ]
edition = "2021"
rust-version = "1.85.0"

[[bin]]
name = "bcachefs"
path = "src/bcachefs.rs"

[features]
default = ["fuse"]
fuse = ["dep:fuser"]

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "4.0.32", features = ["derive", "wrap_help", "color", "error-context", "suggestions"] }
clap_complete = "4.3.2"
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fiemap = "0.2"
libc = "0.2.69"
udev = "0.7.0"
uuid = { version = "1.2.2", features = ["v4"] }
errno = "0.3"
either = "1.5"
bcachefs-kernel = { path = "fs" }
bch_bindgen = { path = "bch_bindgen" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
zeroize = { version = "1", features = ["std", "zeroize_derive"] }
rustix = { version = "1.1.4", features = ["event", "fs", "pipe", "process", "stdio", "system", "termios", "try_close"] }
owo-colors = "4"
crossterm = { version = "0.28", default-features = false, features = ["events"] }
tiny_http = "0.12.0"
rustc-demangle = "0.1"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
fuser = { version = "0.17", optional = true }

[dependencies.env_logger]
version = "0.10"
default-features = false

[profile.release]
#strip = "debuginfo"
debug = 2
# panic = abort makes catch_unwind a no-op, so a panic from libbcachefs (or a
# fault converted to one by libstd's signal handling) can't be swallowed by a
# downstream catch_unwind — it always aborts. The C SIGABRT handler then
# prints the unified backtrace.
panic = "abort"

[package.metadata.vendor-filter]
platforms = ["*-linux-*"]
